# 2pc

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build.sh  compgc-debug.sh  compgc-valgrind.sh  compgc.sh  configure.ac  evaluator.sh  experiments-1.sh  experiments-2.sh  garbler.sh  run.sh  tc-20ms-50mbits.sh  tc-20ms.sh  tc-ml.sh
extra_scripts/: aes_final_gates.txt  aes_gates.txt  aes_round_gates.txt  analyze_gates.py  analyzeshit.py  and_json.py  cbc_json.py  convert_nb.py  convert_wdbc.py  decision_tree.py  eval_data_excel.ods  eval_simd.csv  leven.py  leven8_json.py  leven_dist.py  leven_json.py  main.py  naive_bayes.py  out.csv  outputdata.txt  simple_hyperplane.py  xor_gates.txt
functions/: 22Adder.json  22Adder.json~  3roundaes.json  adder.json  aes.json  aes_new.json  aes_old.json  and.json  aud_nb.json  basic.json  cbc.json  cbc_10_10.json  cbc_2_2.json  cbc_6_6.json  correct_simple_hyperplane.json  credit.json  ecg_dt.json  full_aes.json  leven_2.json  leven_30.json  leven_60.json  leven_8.json  nursery_dt.json  nursery_nb.json  simple_hyperplane.json  super_simple_hyperplane.json  wdbc_nb.json  working_nursery_dt.json  xor.json
include/: 2pc_common.h  2pc_evaluator.h  2pc_function_spec.h  2pc_garbled_circuit.h  2pc_garbler.h  arg.h  components.h  gc_comm.h  ml_models.h  net.h  ot.h  ot_np.h  tests.h  utils.h
justGarble/: Makefile
models/: credit.json  old_wdbc.json  wdbc.json  wdbc_nb.json
src/: 2pc_aes.c  2pc_aes.h  2pc_and.c  2pc_and.h  2pc_cbc.c  2pc_cbc.h  2pc_common.h  2pc_evaluator.c  2pc_evaluator.h  2pc_function_spec.c  2pc_function_spec.h  2pc_garbled_circuit.c  2pc_garbled_circuit.h  2pc_garbler.c  2pc_garbler.h  2pc_hyperplane.c  2pc_hyperplane.h  2pc_leven.c  2pc_leven.h  2pc_old_tests.c  2pc_tests.c  2pc_tests.h  Makefile.am  arg.c  asdf  chaining.c  chaining.h  circuit_builder.c  circuit_builder.h  components.c  crypto.c  crypto.h  gc_comm.c  gc_comm.h  main.c  ml_models.c  ml_models.h  net.c  net.h  old_main.c  (+11 more)
test/: 2pc_aes.c  2pc_aes.h  2pc_and.c  2pc_and.h  2pc_cbc.c  2pc_cbc.h  2pc_hyperplane.c  2pc_hyperplane.h  2pc_leven.c  2pc_leven.h  2pc_misc_tests.c  main.c  (+4 more)
(+36 files in other folders)
